reyting api qoshildi
